--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,7 @@ textarea {
   height: 300px;
   box-sizing: border-box;
   background-position: center;
-  background-image: url("https://lh3.googleusercontent.com/CYhpjWNL0tNW-Q4icK5jfYysPzvV3w4JnUKZDZv7BAz9Gu0Dm7RzNQjPCWWinkBJmg_YktdEGetK7SvaqjRV-FLpvAveMd_XiLocPdN64kevSlo3Iut53rgsykFvc00r9Xg78fDo5pzUuuwroAVA_9AS154LoQWg2bS6JdclP3Ouo_PzM0USLNIKY_bLVc3TNprTdQmx1JJQrp0O3v0UIAsnoXH6ISQZt7nkoWsy7GRoUCGnSKzqjrlCXannlCFMe2kgQQjSx-XomupcO7cZ6wVE00hmDqi_4zPtsmh5dwqDmgg-HZtbzgVIYW0UxYew9igoRmD3nEoyEJwFaH0wMe95-nklLe06VZ6z5J0yo-9MyRvXxmkvV8IC2o2cAMjum2FsDs79uBrSefspgrGC31qqezURVrZvrvP8Di7kK6trduKeSbV5SMVZEwqmyX6AXrTufkVKi4Z2wV0EkNHqHlVdTjsZegLyNJnZX6bBCYoptxQnLkEU-yGyE-wOHDbctujErLG5WP8HRD96tW-NqKs39kaeC7Psv-hnhWlZQVBeU2HrD_LqdnPnjZr-0x0xsRILvfBAZyUX2uPD5QMuhHrQWsy_bcIC4W8V0CIq_ooubjG7MtRoUwg_GUSi-MBaCK5dsySz1wVvecRxray-zhoVOttCLvR-chfeZ7QjaVAR_0PNmw33O4NvwWD65QG5MsBw0uVXdP7saIK5MglspwxFkyga7jFO1cNAmzsQEE1pqcVMVVcNru84oOqlWWEpdukaIvdK7gYzvTPiUYGtNsSe-J-m1tGSIkXiCbNCYjPeOWknMwv9YQ2owQi7uD1n7zFqq3PLBMOFbqcyYjXmIMp1P86PUMCaYJqJNAefUpJ_CcOfW7qUgg2WVITohgeqARzlB2B0tm5UM6yS3ElFU0kKMui0U-tG2vS-XhAzAm6lYdQ-XA=w336-h500-s-no?authuser=0");
-  background-repeat: no-repeat;
+  background-image: url(munheco.png)
   background-size: 90%;
   border: none;
   border-radius: 10px;
